working on the spacing issue

--- a/circle_site/src/scss/_reset.scss
+++ b/circle_site/src/scss/_reset.scss
@@ -74,6 +74,7 @@ h6 {
 #root,
 #__next {
   height: 100%;
+  width: 100%;
 }
 
 html,
