--- a/circle_site/src/scss/components/_announcements.scss
+++ b/circle_site/src/scss/components/_announcements.scss
@@ -25,7 +25,7 @@
   }
 
   .ax-info-container {
-    font-size: $font-size-reg;
+    // font-size: $font-size-reg;
     display: flex;
     width: $partial-full-width;
     overflow: hidden;
@@ -42,9 +42,9 @@
     font-weight: bold;
   }
 
-  p:nth-child(2) {
-    font-size: $font-size-reg;
-  }
+  // p:nth-child(2) {
+  //   // font-size: $font-size-reg;
+  // }
 
   .bot-ax-info > p{
     display: flex;
