--- a/circle_site/src/scss/components/_homepage.scss
+++ b/circle_site/src/scss/components/_homepage.scss
@@ -6,7 +6,6 @@
 
 @media (max-width: 1024px) {
     .homepage {
-        width: 75%;
+        width: 80%;
     }
 }
-
