--- a/circle_site/src/scss/components/_page-layout.scss
+++ b/circle_site/src/scss/components/_page-layout.scss
@@ -2,5 +2,6 @@
     display: flex;
     justify-content: center;
     height: 100%;
-    width: 100%;
+    width: 90%;
+    margin: none;
 }
